# rust-starterkit

./: README.md
.github/: dependabot.yaml
.github/workflows/: cargo-build(axum-rest-api-service).yaml  cargo-build.yaml  ghcr-release(axum-rest-api-service).yaml  ghcr-release.yaml
.github/workflows/axum-rest-api-service/: cargo-build.yaml  ghcr-release.yaml
.run/: ActixWeb.run.xml  Axum.run.xml  Rocket.run.xml  Tide.run.xml  Warp.run.xml  actixweb-restapi-service.run.xml  axum-restapi-service.run.xml  rocket-restapi-service.run.xml  tide-restapi-service.run.xml  warp-restapi-service.run.xml
actixweb-rest-api-service/: Cargo.toml  Dockerfile
actixweb-rest-api-service/src/: main.rs
axum-rest-api-service/: Cargo.toml  Dockerfile  README.md
axum-rest-api-service/.cargo/: config.toml
axum-rest-api-service/assets/: movies.json
axum-rest-api-service/src/: main.rs
axum-rest-api-service/src/handlers/: get_movies_handler.rs  mod.rs
axum-rest-api-service/src/models/: mod.rs  movie.rs
common/src/: lib.rs
rocket-rest-api-service/: Cargo.toml  Dockerfile
rocket-rest-api-service/src/: main.rs
tide-rest-api-service/: Cargo.toml  Dockerfile
tide-rest-api-service/src/: main.rs
tonic-grpc-service/: Cargo.toml  Dockerfile  build.rs
tonic-grpc-service/proto/: grpc_pressure.proto  stress_simulator.proto
tonic-grpc-service/src/: grpc_server.rs  grpc_service.rs  main.rs
tonic-grpc-service/src/services/: grpc_burst_service.rs  grpc_stress_service.rs  mod.rs
warp-rest-api-service/: Cargo.toml  Dockerfile
warp-rest-api-service/src/: main.rs
