[package]
name = "axum-rest-api-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "axum-rest-api-service"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"