[package]
name = "rocket-rest-api-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rocket-rest-api-service"
path = "src/main.rs"

[dependencies]
env_logger = "0.11.7"
log = "0.4.27"
rocket = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
