[package]
name = "tonic-grpc-service"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.38"
env_logger = "0.11.8"
log = "0.4.27"
prost = "0.13.5"
tokio = {version = "1.45.0", features = ["full"]}
tonic = { version = "0.13.1", features = ["transport"] }

[build-dependencies]
tonic-build = "0.13.1"
