[package]
name = "tonic-grpc-service"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
prost = "0.13.5"
tokio = {version = "1.45.0", features = ["full"]}
tonic = { version = "0.13.1", features = ["transport"] }
tonic-reflection = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
